<resources>
    <string name="app_name">100ms(v2)</string>
    <string name="preview_fragment">Preview Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="meeting_fragment">Meeting Fragment</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="participants_fragment">Participants Fragment</string>
    <string name="role_preview_fragment">Role Preview Fragment</string>
    <string name="environment">Environment</string>
    <string name="room_id">Room Id</string>
    <string name="room_name">Room Name</string>
    <string name="username">Username</string>
    <string name="start">Start</string>
    <string name="join_now">Join Now</string>
    <string name="create_room">Create Room</string>
    <string name="end_call">End Call</string>
    <string name="toggle_video">Toggle Video</string>
    <string name="toggle_audio">Toggle Audio</string>
    <string name="flip_camera">Flip Camera</string>
    <string name="android_test_user">android-test-user</string>
    <string name="john_doe">John Doe</string>
    <string name="speaker_john_doe">Speaker - John Doe</string>
    <string name="no_one_speaking">No one is speaking</string>
    <string name="john_doe_initials">JD</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="_8_00">8:00</string>
    <string name="send_message">Send Message</string>
    <string name="message">Message</string>
    <string name="settings">Settings</string>
    <string name="chat">Chat</string>
    <string name="server_message_log">Server Message Log</string>
    <string name="pin_video">Pin Video</string>
    <string name="unpin_video">Unpin Video</string>
    <string name="_100ms_logo">100ms Logo</string>
    <string name="share_link">Share Link</string>
    <string name="more_options">More Options</string>
    <string name="meeting_options">Meeting Options</string>
    <string name="meeting">Meeting</string>
    <string name="diagnostic">Diagnostic</string>
    <string name="open_chat">Open Chat</string>
    <string name="share_screen">Share Screen</string>
    <string name="stop_share_screen">Stop Share Screen</string>
    <string name="stop_white_board">Close Whiteboard</string>
    <string name="record_meeting">Start recording</string>
    <string name="start_record_meeting">Start recording</string>
    <string name="start_screen_share">Start Screen Share</string>
    <string name="start_white_board">Open Whiteboard</string>
    <string name="stop_record_meeting">Record Meeting</string>
    <string name="show_participants">Show Participants</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="default_name">Enter Name...</string>
    <string name="default_video_source">Default Video Source</string>
    <string name="degradation_preference_str">Degradation Preference</string>
    <string name="default_microphone_source">Default Microphone Source</string>
    <string name="publish_video_while_joining">Publish video while joining</string>
    <string name="show_video_preview_before_joining">Show video preview before joining</string>
    <string name="disable_video_track_before_joining">Enable video track before call</string>
    <string name="disable_audio_track_before_joining">Enable audio track before call</string>
    <string name="mirror_my_video">Mirror my video</string>
    <string name="publish_audio_while_joining">Publish audio while joining</string>
    <string name="maximum_rows">Maximum Rows</string>
    <string name="maximum_columns">Maximum Columns</string>
    <string name="audio_poll_interval">Audio Poll Interval</string>
    <string name="silence_audio_level_threshold">Silence Audio Level Threshold</string>
    <string name="show_dominant_speaker">Show Dominant Speaker</string>
    <string name="video_resolution">Video Resolution</string>
    <string name="video_codec">Video Codec</string>
    <string name="log_level_100ms_sdk">Log Level 100ms Sdk</string>
    <string name="log_level_webrtc">Log Level WebRTC</string>
    <string name="search_participants">Search for participants</string>
    <string name="video_bitrate">Video Bitrate</string>
    <string name="role">Role</string>
    <string name="change_role_request">Change Role Request</string>
    <string name="track_change_request">Request</string>
    <string name="non_fatal_error_dialog_title">Error</string>
    <string name="video_framerate">Video Framerate</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="permission_fragment">Permission Fragment</string>
    <string name="permission_artwork">Permission Artwork</string>
    <string name="permission_heading">Grant permission to use camera and microphone</string>
    <string name="permission_description">Access to camera and microphone is needed to make sure other participants can see and hear you during a call</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="do_it_later">Do it later</string>
    <string name="join_a_meeting">Join a meeting</string>
    <string name="start_a_meeting">Start a meeting</string>
    <string name="get_started">Get Started</string>
    <string name="meeting_url_hint">Enter meeting url or code</string>
    <string name="enter_name">Enter Name</string>
    <string name="use_as_default">Use as default</string>
    <string name="progress_bar_heading">Progress Bar Heading</string>
    <string name="progress_bar_description">Progress Bar Description</string>
    <string name="close">Close</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="oops_you_are_disconnected">Oops! You are disconnected</string>
    <string name="reconnect">Reconnect</string>
    <string name="reason">Reason</string>
    <string name="toggle_volume">Toggle Volume</string>
    <string name="pref_speakerphone_key">speakerphone_preference</string>
    <string name="pref_speakerphone_title">Speakerphone.</string>
    <string name="pref_speakerphone_dlg">Speakerphone.</string>
    <string name="pref_speakerphone_default">auto</string>
    <string name="bug_report">Bug Report</string>
    <string name="ok">ok</string>
    <string name="leak_canary">Leak Canary</string>
    <string name="retry">Retry</string>
    <string name="leave">Leave</string>
    <string name="error">Error</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="turn_on">Turn On</string>
    <string name="video_resolution_height">Video Resolution (Height)</string>
    <string name="video_resolution_width">Video Resolution (Width)</string>
    <string name="hero_view">Hero View</string>
    <string name="grid_view">Grid View</string>
    <string name="active_speaker_view">Active Speaker View</string>
    <string name="screen_share">Screen Share</string>
    <string name="brb">Be Right Back</string>
    <string name="audio_status">Audio Status</string>
    <string name="video_status">Video Status</string>
    <string name="audio_level">Audio Level</string>
    <string name="meeting_name">Meeting Name</string>
    <string name="more">More</string>
    <string name="type_a_message">Type a message</string>
    <string name="_0">0</string>
    <string name="_hyphen">-</string>
    <string name="time_12_45">12:45</string>
    <string name="show_network_info">Show Network Info</string>
    <string name="speakers">Speakers</string>
    <string name="toggle_visibility">Toggle Visibility</string>
    <string name="audio_only_view">Audio Only View</string>
    <string name="hls_view">HLS View</string>
    <string name="meeting_mode">Meeting Mode</string>
    <string name="show_retry_progress_bars">Show Retry Progress Bars</string>
    <string name="participant_mute_unmute">Mute/Unmute</string>
    <string name="participant_kick">Kick</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="role_change">Role Change</string>
    <string name="switch_set_initial_name">Enable initial name setting from client</string>
    <string name="end_room">End room</string>
    <string name="end_and_lock_room">Lock and end room</string>
    <string name="remote_mute_all_desc">Remote Mute All</string>
    <string name="remote_mute_role_desc">Remote Mute Role</string>
    <string name="record">Record</string>
    <string name="stop_recording_stream">Stop Recording/Stream</string>
    <string name="add_new_rtmp_streaming_url">Add new RTMP streaming url</string>
    <string name="rtmp_settings">Stream Settings</string>
    <string name="use_hardware_AEC">Use Hardware AEC</string>
    <string name="enable_background">Enable Background</string>
    <string name="disable_background">Disable Background</string>
    <string name="show_stats">Show stats</string>
    <string name="disable_auto_resize">Disable Auto Resize</string>
    <string name="force_software_decoder">Force Software Decoder</string>
    <string name="mute_local_audio_on_phone_ring">Mute local audio on phone ring</string>
    <string name="disable_auto_simulcast">Disable Auto Simulcast</string>
    <string name="is_prebuilt_debug_enabled">Prebuilt (NonDebug/Debug)</string>
    <string name="go_live_in_prebuilt_debug_enabled">Enable Video Filter</string>
    <string name="raise_hand">Raise Hand</string>
    <string name="raise_hands">Raise Hand</string>
    <string name="peer_list">Participant(s)</string>
    <string name="change_name">Change Name</string>
    <string name="pip_mode">PIP mode</string>
    <string name="lower_hand">Lower Hand</string>
    <string name="start_recording">Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="stop_screenshare">Stop ScreenShare</string>
    <string name="name_change_dialog">Type in the new name</string>
    <string name="submit">Submit</string>
    <string name="hls_start">HLS Start</string>
    <string name="hls_stop">HLS Stop</string>
    <string name="recording_start_stop">Recording Started: %1$d, Stopped: %2$d</string>
    <string name="rtmp_start_stop">RTMP Started: %1$d, Stopped: %2$d</string>
    <string name="sfu_start">SFU started at:%d</string>
    <string name="audio_mode_in_call">Audio mode : in-call</string>
    <string name="audio_mode_media">Audio mode : media</string>
    <string name="unknown">unknown</string>
    <string name="file_playing">File Playing</string>
    <string name="camera_and_mic_permissions">Enable permissions</string>
    <string name="permissions_description">Sharing your camera and microphone permissions helps us give you the optimal experience</string>
    <string name="get_name_str">Let’s get started with your name</string>
    <string name="go_live_in_five_str">Go live in five!</string>
    <string name="get_started_str">Get Started</string>
    <string name="name_hint_str">Enter your name here</string>
    <string name="invite_others_str">Invite others to join the conversation</string>
    <string name="add_other_broadcasters_str">Add other broadcasters, or priviliged viewers who can interact with you in real time</string>
    <string name="invite_as_broadcaster">Invite as Broadcaster</string>
    <string name="use_webrtc_noise_cancellation">Use webrtc noise suppression</string>
    <string name="use_krisp_noise_cancellation">Use noise cancellation</string>
</resources>