<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="85dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:contentDescription="@string/permission_artwork"
        android:src="@drawable/music_dj" />

    <TextView
        style="@style/MaterialTextViewHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/go_live_in_five_str"
        android:textSize="34sp"
        app:fontFamily="@font/inter_bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/get_name_str"
        android:textColor="#E0ECFF"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:background="@drawable/gray_round_btn"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/name_hint_str"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:paddingVertical="12dp"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_join_meeting"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
        android:fontFamily="@font/inter_bold"
        android:paddingVertical="12dp"
        android:text="@string/get_started_str"
        android:textAllCaps="false" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>